# rsrfc

./: .gitignore  Cargo.toml
libs/rfc_core/: Cargo.toml
libs/rfc_core/saprfc/gnulinux/: SIGNATURE.SMF
libs/rfc_core/saprfc/osx/: SIGNATURE.SMF
libs/rfc_core/saprfc/osx/nwrfcsdk/lib/: libicui18n.50.dylib  libicuuc.50.dylib  libsapucum.dylib
libs/rfc_core/src/: client.rs  lib.rs  main.rs  rfc.rs
libs/rfc_derive/: Cargo.toml
libs/rfc_derive/src/: attr.rs  field.rs  lib.rs  model.rs  result.rs  table.rs  util.rs
services/demo/: Cargo.toml
services/demo/src/: main.rs
services/sap/: Cargo.toml
services/sap/src/: main.rs
src/: client.rs  lib.rs  rfc.rs
