[package]
name = "rsrfc"
version = "0.1.0"
authors = ["Hans-Christian Esperer <hc@hcesperer.org>"]
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["cdylib", "lib"]
name = "rsrfc"
path = "src/lib.rs"

[[bin]]
name = "rsrfctest"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
dlopen = "*"
dlopen_derive = "*"
serde = { version = "1.0", features = ["derive"] }
widestring = "0.4.0"
