[package]
name = "rsrfc"
version = "0.1.0"
resolver = "2"
authors = ["Hans-Christian Esperer <hc@hcesperer.org>"]
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "lib"]
name = "rsrfc"
path = "src/lib.rs"

[[bin]]
name = "rsrfctest"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
dlopen = "*"
dlopen_derive = "*"
figment = { version = "0.10.19", features = ["toml", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.137"
widestring = "0.4.0"

[dependencies.rfc_derive]
version = "0.1"
path = "../rfc_derive"

[features]
default = []